[package]
name = "wacht-sandbox-client"
version = "0.1.0"
edition = "2024"
description = "NATS client and shared protocol types for the wacht sandbox runtime."
license = "Apache-2.0"
repository = "https://github.com/wacht-platform/wacht-sandbox-client"
readme = "README.md"
keywords = ["sandbox", "nats", "wacht", "agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
anyhow = "1.0"
async-nats = "0.42"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
